<resources>
    <string name="app_name">App21</string>
    <string name="regular_bar">Regular bar</string>
    <string name="contextual_bar">Contextual bar</string>
    <string name="top_app_bar_favorites">Избранное</string>
    <string name="top_app_bar_search">Поиск</string>
    <string name="top_app_bar_more">Еще</string>
    <string name="long_click_me">long click me</string>
    <string name="myButton">click me</string>
    <string name="image_title">image title</string>
    <string name="text_title">title</string>
    <string name="text_description">description</string>
    <string name="run_animation">run</string>
    <string name="start_rocket">start</string>
</resources>