<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_title"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/image_title"
        android:src="@drawable/ic_close_24dp" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_toEndOf="@+id/image_title"
        android:text="@string/text_title" />


    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/text_title"
        android:layout_margin="10dp"
        android:layout_toEndOf="@+id/image_title"
        android:text="@string/text_description" />


</RelativeLayout>